Fixed issue with "jumping" search-input

--- a/frontend/nau4ok/src/static/NavbarStyle.less
+++ b/frontend/nau4ok/src/static/NavbarStyle.less
@@ -53,13 +53,8 @@
 }
 
 .search-form {
-  padding-top: 5px;
-  padding-bottom: 5px;
-
   width: 70%;
-
   color: @gray-light;
-
   background-color: transparent;
   border: none;
   border-bottom: 1px solid @gray-light;
@@ -71,21 +66,20 @@
 
 .search-form:hover {
   color: white;
-  border-bottom: 1px solid white;
 }
 
 .search-form:hover::placeholder {
-  .search-form;
   color: white;
 }
 
 .search-form:focus {
   color: white;
-  border-bottom: 1px solid white;
+  outline: none;
 }
 
 .search-form:focus::placeholder {
   color: white;
+
 }
 
 @media screen and (max-width: 990px) {
